[package]
name = "cobalt"
version = "0.1.0"
edition = "2021"

[lib]
name = "utils"
path = "src/utils.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.3", features = ["dynamic_linking"] }
bevy_common_assets = "0.7.0"
bevy_renet = { version = "0.0.9", features = ["transport"] }
bincode = "1.3.3"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
