[package]
name = "cobalt"
version = "0.1.0"
edition = "2021"

[lib]
name = "utils"
path = "src/utils.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
required-features = ["client"]

[[bin]]
name = "server"
path = "src/bin/server.rs"
required-features = ["server"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
bevy_2d_collisions = "0.3.2"
bevy_common_assets = "0.7.0"
bevy_enum_filter = "0.3.0"
bevy_health_bar = "0.1.0"
bevy_renet = { version = "0.0.10", features = ["transport"] }
bevy_tweening = { version = "0.10.0", features = ["bevy_sprite", "bevy_ui", "bevy_text"] }
bincode = "1.3.3"
enum-display = "0.1.3"
moonshine-spawn = "0.2.0"
rand = { version = "0.9.0-alpha.0", features = ["small_rng"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
uuid = "1.7.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[features]
server = []
client = []
